DASH-161 Ship order with invoice file (#604)
* Init commit for a controller, use case etc
* Upload invoice file
* Behat test to upload invoice. In progress
