# docs/openapi/paella-openapi-full.yaml
@@ -2346,6 +2346,46 @@ paths:
       x-groups:
         - public
         - private
+  '/order/{uuid}/ship-with-invoice':
+    post:
+      tags:
+        - 'Order Management'
+      summary: 'Ship Order With Invoice'
+      operationId: order_ship_with_invoice
+      parameters:
+        -
+          name: uuid
+          in: path
+          description: 'Order UUID'
+          required: true
+          schema:
+            $ref: '#/components/schemas/UUID'
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/ShipOrderWithInvoiceRequest'
+      responses:
+        '200':
+          description: 'Order successfully shipped. Order details.'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OrderResponse'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '500':
+          $ref: '#/components/responses/ServerError'
+      security:
+        -
+          oauth2: []
+      x-groups:
+        - private
   /merchant/signatory-powers-selection:
     post:
       tags:
@@ -2634,6 +2674,7 @@ components:
         - MANAGE_ONBOARDING
         - CHANGE_DEBTOR_INFORMATION
         - UPDATE_ORDERS
+        - SHIP_ORDERS
       example:
         - VIEW_ORDERS
         - VIEW_DEBTORS
@@ -2648,6 +2689,7 @@ components:
         - MANAGE_ONBOARDING
         - CHANGE_DEBTOR_INFORMATION
         - UPDATE_ORDERS
+        - SHIP_ORDERS
     DebtorInformationChangeRequestState:
       title: 'Debtor Information ChangeRequest State'
       type: string
@@ -3481,17 +3523,25 @@ components:
     ShipOrderRequest:
       title: 'Order Shipping Object'
       properties:
-        external_order_id:
-          description: 'External Order ID. It should only be provided if it was not provided in the create order call.'
-          nullable: true
-          $ref: '#/components/schemas/TinyText'
-        invoice_number:
-          $ref: '#/components/schemas/TinyText'
         invoice_url:
           $ref: '#/components/schemas/URL'
         shipping_document_url:
           $ref: '#/components/schemas/URL'
       type: object
+      allOf:
+        -
+          $ref: '#/components/schemas/AbstractShipOrderRequest'
+    ShipOrderWithInvoiceRequest:
+      title: 'Order Shipping With Invoice Object'
+      properties:
+        invoice_file:
+          description: 'Invoice file'
+          type: string
+          format: binary
+      type: object
+      allOf:
+        -
+          $ref: '#/components/schemas/AbstractShipOrderRequest'
     SignatoryPowersSelectionRequest:
       title: 'Signatory powers selection request'
       properties:
@@ -4075,6 +4125,16 @@ components:
           $ref: '#/components/schemas/DateTime'
         shipped_at:
           $ref: '#/components/schemas/DateTime'
+      type: object
+    AbstractShipOrderRequest:
+      title: 'Order Shipping plain Object'
+      properties:
+        external_order_id:
+          description: 'External Order ID. It should only be provided if it was not provided in the create order call.'
+          nullable: true
+          $ref: '#/components/schemas/TinyText'
+        invoice_number:
+          $ref: '#/components/schemas/TinyText'
       type: object
     SignatoryPowerDTO:
       title: 'Signatory Power Data transfer object'
