# src/Application/UseCase/ShipOrder/ShipOrderRequest.php
@@ -2,38 +2,22 @@
 
 namespace App\Application\UseCase\ShipOrder;
 
-use App\Application\UseCase\AbstractOrderRequest;
 use App\Application\UseCase\ValidatedRequestInterface;
-use App\Application\Validator\Constraint as CustomAssert;
 use App\DomainModel\ArrayableInterface;
+use App\DomainModel\ShipOrder\AbstractShipOrderRequest;
 use Symfony\Component\Validator\Constraints as Assert;
 use OpenApi\Annotations as OA;
 
 /**
- * @OA\Schema(schema="ShipOrderRequest", title="Order Shipping Object", type="object", properties={
- *      @OA\Property(property="external_order_id", ref="#/components/schemas/TinyText", nullable=true, description="External Order ID. It should only be provided if it was not provided in the create order call."),
- *      @OA\Property(property="invoice_number", ref="#/components/schemas/TinyText"),
+ * @OA\Schema(schema="ShipOrderRequest", title="Order Shipping Object", type="object",
+ *     allOf={@OA\Schema(ref="#/components/schemas/AbstractShipOrderRequest")},
+ *     properties={
  *      @OA\Property(property="invoice_url", ref="#/components/schemas/URL"),
  *      @OA\Property(property="shipping_document_url", ref="#/components/schemas/URL")
  * })
  */
-class ShipOrderRequest extends AbstractOrderRequest implements ValidatedRequestInterface, ArrayableInterface
+class ShipOrderRequest extends AbstractShipOrderRequest implements ValidatedRequestInterface, ArrayableInterface
 {
-    /**
-     * @var string
-     * @Assert\NotBlank(groups={"RequiredExternalCode"})
-     * @Assert\Length(max="255")
-     * @CustomAssert\OrderExternalCode()
-     */
-    private $externalOrderId;
-
-    /**
-     * @var string
-     * @Assert\NotBlank()
-     * @Assert\Length(max="255")
-     */
-    private $invoiceNumber;
-
     /**
      * @var string
      * @Assert\NotBlank()
@@ -47,16 +31,6 @@ class ShipOrderRequest extends AbstractOrderRequest implements ValidatedRequestI
      */
     private $shippingDocumentUrl;
 
-    public function getExternalCode(): ? string
-    {
-        return $this->externalOrderId;
-    }
-
-    public function getInvoiceNumber(): string
-    {
-        return $this->invoiceNumber;
-    }
-
     public function getInvoiceUrl(): string
     {
         return $this->invoiceUrl;
@@ -65,20 +39,6 @@ class ShipOrderRequest extends AbstractOrderRequest implements ValidatedRequestI
     public function getShippingDocumentUrl(): ?string
     {
         return $this->shippingDocumentUrl;
-    }
-
-    public function setExternalCode(?string $externalCode): ShipOrderRequest
-    {
-        $this->externalOrderId = $externalCode;
-
-        return $this;
-    }
-
-    public function setInvoiceNumber(?string $invoiceNumber): ShipOrderRequest
-    {
-        $this->invoiceNumber = $invoiceNumber;
-
-        return $this;
     }
 
     public function setInvoiceUrl(?string $invoiceUrl): ShipOrderRequest
