# src/DomainModel/OrderInvoice/OrderInvoiceManager.php
@@ -2,9 +2,14 @@
 
 namespace App\DomainModel\OrderInvoice;
 
+use App\Application\UseCase\HttpInvoiceUpload\HttpInvoiceUploadException;
+use App\DomainModel\FileService\FileServiceInterface;
+use App\DomainModel\FileService\FileServiceRequestException;
 use App\DomainModel\Order\OrderEntity;
+use App\Infrastructure\ClientResponseDecodeException;
 use Billie\MonitoringBundle\Service\Logging\LoggingInterface;
 use Billie\MonitoringBundle\Service\Logging\LoggingTrait;
+use Symfony\Component\HttpFoundation\File\UploadedFile;
 
 class OrderInvoiceManager implements LoggingInterface
 {
@@ -12,12 +17,28 @@ class OrderInvoiceManager implements LoggingInterface
 
     private $uploadHandlers;
 
+    private $fileService;
+
+    private $orderInvoiceRepository;
+
+    private $orderInvoiceFactory;
+
     /**
      * @param InvoiceUploadHandlerInterface[] $invoiceUploadHandlers
+     * @param FileServiceInterface            $fileService
+     * @param OrderInvoiceRepositoryInterface $orderInvoiceRepository
+     * @param OrderInvoiceFactory             $orderInvoiceFactory
      */
-    public function __construct(array $invoiceUploadHandlers)
-    {
+    public function __construct(
+        array $invoiceUploadHandlers,
+        FileServiceInterface $fileService,
+        OrderInvoiceRepositoryInterface $orderInvoiceRepository,
+        OrderInvoiceFactory $orderInvoiceFactory
+    ) {
         $this->uploadHandlers = $invoiceUploadHandlers;
+        $this->fileService = $fileService;
+        $this->orderInvoiceRepository = $orderInvoiceRepository;
+        $this->orderInvoiceFactory = $orderInvoiceFactory;
     }
 
     public function upload(OrderEntity $order, string $event): void
@@ -40,5 +61,23 @@ class OrderInvoiceManager implements LoggingInterface
         ]);
 
         throw new OrderInvoiceUploadException('No supported handler found');
+    }
+
+    public function uploadInvoiceFile(OrderEntity $order, UploadedFile $uploadedFile): void
+    {
+        try {
+            $file = $this->fileService->uploadFromFile($uploadedFile, $uploadedFile->getClientOriginalName(), FileServiceInterface::TYPE_ORDER_INVOICE);
+        } catch (FileServiceRequestException | ClientResponseDecodeException $exception) {
+            throw new HttpInvoiceUploadException($exception->getMessage(), null, $exception);
+        }
+
+        $orderInvoice = $this->orderInvoiceFactory->create($order->getId(), $file->getFileId(), $order->getInvoiceNumber());
+        $this->orderInvoiceRepository->insert($orderInvoice);
+
+        $this->logInfo('Invoice {invoice_number} for order id {order_id} uploaded with file id {file_id}', [
+            'invoice_number' => $order->getInvoiceNumber(),
+            'order_id' => $order->getId(),
+            'file_id' => $file->getFileId(),
+        ]);
     }
 }
